<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_category"
        android:title="@string/title_category"
        android:icon="@drawable/symbol_list"/>

    <item
        android:id="@+id/navigation_home"
        android:title="@string/title_reports"
...
