...
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/textview_category"
            android:text="Food"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

...
